# RainaV2-Backend-Mono

./: README.md
services/artifact-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/artifact-service/app/: config.py  logging_conf.py  main.py
services/artifact-service/app/dal/: artifact_dal.py
services/artifact-service/app/db/: mongodb.py
services/artifact-service/app/events/: rabbit.py  workspace_consumer.py
services/artifact-service/app/models/: artifact.py  kind_registry.py
services/artifact-service/app/routers/: artifact_routes.py  registry_routes.py
services/artifact-service/app/seeds/: bootstrap.py  seed_registry.py
services/artifact-service/app/services/: openapi_typing.py  registry_service.py
services/artifact-service/tests/: test_artifact_routes.py
services/discovery-service/: .env.example  Dockerfile  pyproject.toml
services/discovery-service/app/: config.py  main.py
services/discovery-service/app/agents/: generate_node.py  generic_kind_agent.py  ingest_node.py  persist_node.py  plan_node.py  publish_node.py  registry.py  spi.py  validate_node.py
services/discovery-service/app/artifacts/: adapters.py
services/discovery-service/app/clients/: artifact_service.py  capability_registry.py  kind_registry.py
services/discovery-service/app/db/: discovery_runs.py
services/discovery-service/app/diagrams/: drawio.py
services/discovery-service/app/graphs/: discovery_graph.py
services/discovery-service/app/infra/: rabbit.py
services/discovery-service/app/llms/: base.py  openai_provider.py  (+1 more)
services/guidance-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/guidance-service/app/: config.py  logging.py  main.py
(+72 files in other folders)
