[project]
name = "artifact-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "motor>=3.5",
  "orjson>=3.10",
  "jsonpatch>=1.33",
  "aio-pika>=9.4",      # ← add this
  "pika>=1.3",        # ← remove if not used anywhere else
  "httpx>=0.27",
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
