[project]
name = "discovery-service"
version = "0.1.0"
description = "RainaV2 discovery orchestrator (LangGraph + pluggable LLMs)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.114.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.5.2",
  "httpx>=0.27.0",
  "orjson>=3.10.7",
  "langgraph>=0.2.0",
  "typing-extensions>=4.12.2",
  "pika>=1.3.2",
  "python-dotenv>=1.0.1",
  "tenacity>=8.4.2",
  "structlog>=24.1.0",
  "openai>=1.40.0",
  "pymongo[srv]>=4.7.2"
]

[tool.uvicorn]
factory = true
